# Workspace

devel/: .catkin  _setup_util.py
devel/lib/control/: MPC.py
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/lidar/: lidar_interpret.py
devel/lib/pkgconfig/: control.pc  example_description.pc  example_gazebo.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  landmarks.pc  lidar.pc  telemetries.pc  test.pc
src/control/: CMakeLists.txt
src/control/src/: MPC.py  rover_control.cpp
src/example_description/: model.config
src/example_description/meshes/: frame.dae  lidar.dae  rover.dae  wheel.dae
src/example_description/sdf/: example.sdf
src/example_description/urdf/: example.urdf  rover.urdf
src/example_gazebo/: CMakeLists.txt  package.xml
src/example_gazebo/launch/: example_gazebo.launch
src/hector_slam_launch/launch/: hector_ugv.launch  mapping_box.launch  mpo700_mapping.launch
src/lidar/: CMakeLists.txt  package.xml
src/lidar/src/: lidar_interpret.py
src/telemetries/: CMakeLists.txt
src/telemetries/src/: telemetries.cpp
src/test/: CMakeLists.txt
src/test/src/: rover_telemetries.cpp  (+1 more)
(+24 files in other folders)
